FILE(GLOB tea_SOURCES "*.cpp")

ADD_LIBRARY(tea_static STATIC ${tea_SOURCES})
SET_TARGET_PROPERTIES(tea_static PROPERTIES OUTPUT_NAME tea)
TARGET_LINK_LIBRARIES(tea_static)
INSTALL(TARGETS tea_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
  ADD_LIBRARY(tea_shared SHARED ${tea_SOURCES})
  SET_TARGET_PROPERTIES(tea_shared PROPERTIES OUTPUT_NAME tea)
  TARGET_LINK_LIBRARIES(tea_shared)
  INSTALL(TARGETS tea_shared DESTINATION lib)
ENDIF()
