FILE(GLOB_RECURSE utils_SOURCES "*.cpp")

IF(NOT WIN32)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
ENDIF()

ADD_LIBRARY(utils_static STATIC ${utils_SOURCES})
SET_TARGET_PROPERTIES(utils_static PROPERTIES OUTPUT_NAME utils)
TARGET_LINK_LIBRARIES(utils_static ${Boost_LIBRARIES})
INSTALL(TARGETS utils_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
    ADD_LIBRARY(utils_shared SHARED ${utils_SOURCES})
    SET_TARGET_PROPERTIES(utils_shared PROPERTIES OUTPUT_NAME utils)
    TARGET_LINK_LIBRARIES(utils_shared ${Boost_LIBRARIES})
    INSTALL(TARGETS utils_shared DESTINATION lib)
ENDIF()
