FILE(GLOB_RECURSE network_SOURCES "*.cpp")

ADD_LIBRARY(network_static STATIC ${network_SOURCES})
SET_TARGET_PROPERTIES(network_static PROPERTIES OUTPUT_NAME network)
TARGET_LINK_LIBRARIES(network_static ${Boost_LIBRARIES} )
INSTALL(TARGETS network_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
  ADD_LIBRARY(network_shared SHARED ${network_SOURCES})
  SET_TARGET_PROPERTIES(network_shared PROPERTIES OUTPUT_NAME network)
  TARGET_LINK_LIBRARIES(network_shared ${Boost_LIBRARIES})
  INSTALL(TARGETS network_shared DESTINATION lib)
ENDIF()
